# roc-async

./: .gitignore  AsyncMalloc.md  MusingOnFutures.md  async-test.roc
00-future-passthrough/: Cargo.toml  fp-test.roc
00-repro-for-3549/: Cargo.toml  Effect.roc  main.roc  repro.roc
00-repro-for-3549/src/: lib.rs
01-explicit-continuation/: .gitignore  Cargo.toml  README.md  main.roc
01-explicit-continuation/src/: lib.rs
01-explicit-continuations/: ec-test.roc  main.roc
01-explicit-continuations/src/: lib.rs
02-future-continuation/: .gitignore  Cargo.toml  Effect.roc  README.md  fc-test.roc  main.roc
02-future-continuation/src/: lib.rs
03-nested-continuations/: .gitignore  README.md  main.roc  nc-test.roc
03-nested-continuations/src/: lib.rs
04-nested-future-continuations/: .gitignore  Cargo.toml  Effect.roc  README.md  main.roc  nfc-test.roc
04-nested-future-continuations/src/: lib.rs
05-async-web/: ARE_WE_WEB_YET.md  README.md
05-async-web/hyper-raw/: Cargo.toml  askama.toml
05-async-web/hyper-raw/src/: main.rs
05-async-web/hyper-raw/templates/: roc-home.html
05-async-web/hyper-roc/: .gitignore  Cargo.toml  Effect.roc  Html.roc  hyper-roc.roc  main.roc
05-async-web/hyper-roc/src/: lib.rs
future-passthrough/: Effect.roc  README.md
future-passthrough/src/: lib.rs
platform/: Cargo.toml
platform/src/: lib.rs  main.rs
