[package]
name = "host"
version = "0.1.0"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2021"

links = "app"

[lib]
name = "host"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
roc_std = { path = "../../roc/crates/roc_std" }
tokio = { version = "1.19.2", features = ["full"] }
bumpalo = "3.10.0"
libc = "0.2"

[workspace]
